--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,13 @@
 <div id="fakeloader"></div>
 <div class="jumbotron" id="header">
     <div class="container">
-        <h1 class="display-4">Wortsuche</h1>
-        <p class="lead">Finde die Wörter, die sich zwischen den Buchstaben versteckt haben!</p>
+        <div class="row">
+            <img src="./static/magnifying-glass.png" class="col-lg-2" style="height:150px; width:100px">
+            <div class="col-lg-10">
+                <h1 class="display-4">Wortsuche</h1>
+                <p class="lead">Finde die Wörter, die sich zwischen den Buchstaben versteckt haben!</p>
+            </div>
+        </div>
         <hr class="my-4">
         <p>Gib die Dimension des zu erstellenenden Spielfeldes ein und versuch' alle Wörter zu finden.</p>
     </div>
